--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   fluentui_icons: ^1.0.0
+  # To add google fonts
+  google_fonts: ^3.0.1
   get:
 
 dev_dependencies:
