changes in pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,8 @@ flutter:
 
   assets:
     - assets/imgs/
+    - assets/imgs/icons/
+    - assets/imgs/images/
 
   # fonts:
   #   - family: Schyler
